cover.css
/*
 * Globals
 */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Custom default button */
.btn-light,
.btn-light:hover,
.btn-light:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
}


/*
 * Base structure
 */

body {
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
}




/*
 * Header
 */


.banner-wrap{
  background-image: url(./ASSETS/B.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
  z-index: 1;
}

.overlay {
  z-index: -1;
  height: 100vh;
  width: 100%;
  background: black;
  opacity: 50%;
  position: absolute;
  top: 0;
}

.nav-masthead .nav-link {
  color: rgba(255, 255, 255, .5);
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

.container .col img{
  height: 153.41px;
  width: 285,656px;
}

